<resources>
    <string name="app_name">Training</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Profile</string>
    <string name="nav_header_subtitle">ap22768@essex.ac.uk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">About</string>
    <string name="update_app">Update App</string>
    <string name="install">Install</string>
    <string name="textview"></string>
    <string name="install_apk">Install Apk</string>
    <string name="recieve_data_from_iis">Receive Data from IIS</string>
    <string name="get_data_from_an_api_xml_site_and_output_them">Get data from an API xml site and output them</string>
    <string name="todo">TODO</string>
    <string name="install_an_apk_file">Install An Apk file</string>
</resources>