<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_retrive"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="15dp"
          >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/teal_200">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/recieve_data_from_iis"
                    android:textColor="#546E7A"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/get_data_from_an_api_xml_site_and_output_them"
                    android:textColor="#5E35B1"
                    android:textSize="13sp" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:maxHeight="100dp"
                    android:src="@mipmap/ic_retrieve_data_foreground"
                    android:layout_marginStart="300dp"
                    android:contentDescription="@string/todo"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/updatecard"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="15dp"
            >

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/orange">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="Update App"
                    android:textColor="#6D4C41"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="55dp"
                    android:text="Get data from an API xml site and output them"
                    android:textColor="#4A148C"
                    android:textSize="13sp"
                    tools:ignore="HardcodedText"></TextView>

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginStart="300dp"
                    android:maxHeight="100dp"
                    android:src="@mipmap/ic_update_foreground"
                    android:contentDescription="TODO"
                    tools:ignore="ContentDescription,HardcodedText"></ImageView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="15dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_200">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/install_an_apk_file"
                    android:textColor="#5E35B1"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="55dp"
                    android:text="Get data from an API xml site and output them"
                    android:textColor="#311B92"
                    android:textSize="13sp"
                    tools:ignore="HardcodedText"></TextView>

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginLeft="300dp"
                    android:maxHeight="100dp"
                    android:src="@mipmap/ic_install_foreground"
                    tools:ignore="ContentDescription,ImageContrastCheck,RtlHardcoded"></ImageView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvInstallVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textAlignment="center"
            tools:ignore="TextSizeCheck"></TextView>

        <Button
            android:layout_width="100dp"
            android:layout_height="50sp"
            android:layout_marginStart="150dp"
            android:text="Print"
            android:id="@+id/printpdfbtn" />

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>